--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,7 +10,7 @@
 <!-- Sign In div with golf logos -->
     <div class="signin-div">
         <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
-        <p>Already have an account? Then please<a href="{% url 'account_login' %}">sign in</a></p>
+        <span>Already have an account? Then please<a id="signin" href="{% url 'account_login' %}">sign in</a></span>
         <i class="fa-solid fa-golf-ball-tee" id="golfball"></i>
     </div>
     {% setvar link %}
