--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,14 @@ h1 {
     border: 5px solid white;
 }
 
+.signup-div {
+    margin-top: 30px; 
+    background-color: aqua;
+    border: 5px solid white;
+    border-style: ridge;
+    margin: 50px;
+}
+
 .signin-div {
     margin-top: 30px; 
     background-color: aqua;
@@ -61,12 +69,8 @@ h1 {
     margin: 50px;
 }
 
-.signup-div {
-    margin-top: 30px; 
-    background-color: aqua;
-    border: 5px solid white;
-    border-style: ridge;
-    margin: 50px;
+#signin {
+    padding-left: 5px;
 }
 
 /* Form styles */
