--- a/home/templates/home/golfcourse_list.html
+++ b/home/templates/home/golfcourse_list.html
@@ -2,11 +2,13 @@
 
 {% load static %}
     {% block content %}
+<div class="submit-course">
     <h1 class="golf-course">Submit your favourite golf courses here!</h1>
         <ul>
             {% for course in course_list %}
             <li><a href="{% url 'golfcourse_detail' course.pk %}">{{ course.name }}</a></li>
             {% endfor %}
         </ul>
-        <a href="{% url 'golfcourse_create' %}">Add a new golf course</a>
+        <button class="submit-golfcourse-button"><a href="{% url 'golfcourse_create' %}">Add a new golf course &raquo;</a></button>
+</div>
     {% endblock %}
