--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,6 +73,14 @@ h1 {
     padding-left: 5px;
 }
 
+.submit-course {
+    padding-top: 50px;
+}
+
+.submit-golfcourse-button {
+    width: 50%;
+}
+
 /* Form styles */
 
 .form-container {
@@ -162,7 +170,7 @@ a:hover {
     margin: 0;
     font-size: 18px;
     background-color: #2D2D2D;
-    border: 10px solid #FFDDC2;
+    border: 10px solid #2D2D2D;
     border-radius: 4px;
     text-align: center;
     font-weight: 400;
