Add nice background gradient

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,5 +88,6 @@
           <p id="copyright">Darragh Drennan &copy; 2024</p>
         </div>
     </footer>
+    <button id="ScrollTop">Back to top</button>
 </body>
 </html>
