--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: 25px;
     text-align: center;
-    background-color: #C2E4FF;
+    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
     margin: 0;
     padding: 0;
 }
@@ -328,6 +328,17 @@ label {
     width: 10%;
     color: black;
     margin-bottom: 20px;
+}
+
+/* Scroll back to top button */
+
+#ScrollTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 10%;
+    color: black;
+    opacity: 80%;
 }
 
 
