--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,9 @@
           <p id="copyright">Darragh Drennan &copy; 2024</p>
         </div>
     </footer>
-    <button id="ScrollTop">Back to top</button>
+    <button id="scrollTopButton">Back to top<i class="fa-solid fa-angle-up" class="up-arrow"></i></button>
+    <!-- JavaScript -->
+    <script src="{% static 'js/script.js' %}">        
+    </script>
 </body>
 </html>
