--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,6 @@ a {
 }
 
 h1 {
-    background-color: #C2E4FF;
     padding: 10px 10px 10px 10px;
     text-align: center;
     margin: 0;
@@ -170,7 +169,7 @@ a:hover {
 
 .post-returnhome:hover {
     text-decoration: underline;
-    background-color: white;;
+    background-color: white;
 }
 
 
@@ -178,13 +177,11 @@ a:hover {
 
 .hero-unit {
     padding: 20px;
-    margin: 0;
     font-size: 18px;
-    background-color: #2D2D2D;
-    border: 10px solid #2D2D2D;
-    border-radius: 4px;
     text-align: center;
     font-weight: 400;
+    margin: 20px;
+    border: 10px ridge black;
 }
 
 .pager {
@@ -208,7 +205,6 @@ a:hover {
 }
 
 .page-header {
-    background-color: #C2E4FF;
     padding: 20px 0;
     border: 20px solid black;
     border-style: ridge;
