Add commenting on HTMl templates

--- a/home/templates/home/golfcourse_detail.html
+++ b/home/templates/home/golfcourse_detail.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<!-- Layout of golf course submission form -->
     <h1>{{ object.name }}</h1>
     <p>Location: {{ object.location }}</p>
     <p>Par: {{ object.par }}</p>
