--- a/home/templates/home/golfcourse_list.html
+++ b/home/templates/home/golfcourse_list.html
@@ -2,6 +2,7 @@
 
 {% load static %}
     {% block content %}
+<!-- Golf course submission form -->
 <div class="submit-course">
     <h1 class="golf-course">Submit your favourite golf courses here!</h1>
         <ul>
