--- a/home/templates/home/post_detail.html
+++ b/home/templates/home/post_detail.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<!-- Post structure HTML -->
 <body>
     <div class="masthead">
         <div class="container">
