--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,6 +7,7 @@
 {% block content %}
     {% if not SOCIALACCOUNT_ONLY %}
         {% setvar link %}
+        <!-- Customised login AllAuth page -->
             <a href="{{ signup_url }}">
             {% endsetvar %}
             {% setvar end_link %}
