--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}
     {% trans "Signup" %}
 {% endblock head_title %}
-
+<!-- Customised AllAuth signup page -->
 {% block content %}
 <!-- Sign In div with golf logos -->
     <div class="signin-div">
