Add golf course list button

--- a/home/templates/home/golfcourse_detail.html
+++ b/home/templates/home/golfcourse_detail.html
@@ -11,4 +11,5 @@
     <a href="{% url 'golfcourse_update' object.pk %}">Edit</a>
     <a href="{% url 'golfcourse_delete' object.pk %}"></a>
     <a href="{% url 'golfcourse_list' %}">Back to course list</a>
+    <button><a href="{% url 'golf-courses' %}"></a></button>
 {% endblock %}
