--- a/home/templates/home/golfcourse_form.html
+++ b/home/templates/home/golfcourse_form.html
@@ -10,4 +10,5 @@
         <button id="save-golfcourse-button" type="submit">Save</button>
     </form>
     <a href="{% url 'golfcourse_list' %}">Cancel</a>
+    <button class="golf-course-list-button"><a href="{% url 'golf-courses' %}"></a>View list of golf courses!</button>
 {% endblock %}
