--- a/home/templates/home/golf_course_display.html
+++ b/home/templates/home/golf_course_display.html
@@ -15,6 +15,7 @@
             <p>Submitted on: {{ course.submitted_at }}</p>
         </li>
         {% endfor %}
+        <button><a href="{% url 'golfcourse_list' %}">Back to course form!</a><button>
     </ul>
 </body>
 
