--- a/home/templates/home/golfcourse_list.html
+++ b/home/templates/home/golfcourse_list.html
@@ -11,6 +11,6 @@
             {% endfor %}
         </ul>
         <button class="submit-golfcourse-button"><a href="{% url 'golfcourse_create' %}">Add a new golf course &raquo;</a></button>
-        <button class="golf-course-list-button"><a href="{% url 'golf-courses' %}"></a>View list of golf courses!</button>
+        <button class="golf-course-list-button"><a href="{% url 'golf-courses' %}"></a>View list of golf courses! &raquo;</button>
 </div>
     {% endblock %}
