--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
     <div class="buttons">
         <!-- Buttons which will take the user to different parts of the site -->
         <button class="wide-buttons text-black">Click here to view our blog posts &raquo;</button>
-        <button class="wide-buttons text-black"><a href="{% url 'golfcourse_list' %}">Click here to view our favourite golf courses &raquo;</button></a>
+        <button class="wide-buttons text-black"><a href="{% url 'golfcourse_list' %}">Click here to submit and view our favourite golf courses &raquo;</button></a>
         <button class="wide-buttons text-black">Click here to view the background story of Darragh, the creator of TeeTime &raquo;</button>
     </div>
     {% endblock %}
