Give all buttons text decoration of underline

--- a/home/templates/home/golfcourse_list.html
+++ b/home/templates/home/golfcourse_list.html
@@ -10,7 +10,7 @@
             <li><a href="{% url 'golfcourse_detail' course.pk %}">{{ course.name }}</a></li>
             {% endfor %}
         </ul>
-        <button class="submit-golfcourse-button"><a href="{% url 'golfcourse_create' %}">Add a new golf course &raquo;</a></button>
+        <button class="golf-course-list-button"><a href="{% url 'golfcourse_create' %}">Add a new golf course &raquo;</a></button>
         <button class="golf-course-list-button"><a href="{% url 'golf-courses' %}"></a>View list of golf courses! &raquo;</button>
 </div>
     {% endblock %}
