--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <!-- Header -->
     <div class="header-div">
         <header class="page-header">
-            <h1><a href="{% url 'home' %}">TeeTime</h1></a>
+            <h1><a href="{% url 'home' %}">TeeTime</a></h1>
             <span>All things golf related</span>
         </header>
     </div>
