--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,7 @@ p {
 a {
     text-align: center;
     color: black;
+    text-decoration: none;
 }
 
 #golfball {
@@ -151,24 +152,15 @@ button {
     margin-top: 0;
 }
 
-.post a {
-    text-decoration: none;
-    color: #333;
-}
-
 /* Hover pseudo classes */
 
-.post a:hover {
+.signin-span:hover, .golf-course-list-button:hover, .signup-span:hover, .form-button:hover, #save-golfcourse-button:hover, #cancel-golfcourse-button:hover, .wide-buttons:hover, .nav-item:hover, .submit-golfcourse-button:hover {
     text-decoration: underline;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
-.post-returnhome:hover {
-    text-decoration: underline;
-    background-color: white;
+.form-button:hover {
+    background-color: purple;
+    transition: 0.4s;
 }
 
 
@@ -236,15 +228,6 @@ form {
     width: 15%;
     color: black;
     margin-bottom: 20px;
-}
-
-.signin-span:hover, .golf-course-list-button:hover, .signup-span:hover, .form-button:hover, #save-golfcourse-button:hover, #cancel-golfcourse-button:hover {
-    text-decoration: underline;
-}
-
-.form-button:hover {
-    background-color: blue;
-    transition: 0.4s;
 }
 
 #id_password1, #id_password2, #id_username, #id_email {
