--- a/home/templates/home/golf_course_display.html
+++ b/home/templates/home/golf_course_display.html
@@ -5,18 +5,20 @@
 {% block content %}
 
 <body>
-    <h1>Golf Course List!</h1>
-    <ul>
-        {% for course in courses %}
-        <li>
-            <h2>{{ course.name }}</h2>
-            <p>Location: {{ course.location }}</p>
-            <p>{{ course.description }}</p>
-            <p>Submitted on: {{ course.submitted_at }}</p>
-        </li>
-        {% endfor %}
-        <button class="back-to-courseform-button"><a href="{% url 'golfcourse_list' %}">Back to course form!</a><button>
-    </ul>
+    <div class="golf-courselist-div">
+        <h1>Golf Course List!</h1>
+        <ul>
+            {% for course in courses %}
+            <li>
+                <h2>{{ course.name }}</h2>
+                <p>Location: {{ course.location }}</p>
+                <p>{{ course.description }}</p>
+                <p>Submitted on: {{ course.submitted_at }}</p>
+            </li>
+            {% endfor %}
+            <button class="back-to-courseform-button"><a href="{% url 'golfcourse_list' %}">Back to course form!</a><button>
+        </ul>
+    </div>
 </body>
 
 {% endblock %}
