--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,7 @@ nav {
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
+    box-shadow: 10px 10px;
 }
 
 p {
@@ -76,6 +77,7 @@ h1 {
     border: 5px solid white;
     border-style: ridge;
     margin: 50px;
+    box-shadow: 10px 10px;
 }
 
 #signin {
@@ -173,6 +175,7 @@ button {
     font-weight: 400;
     margin: 20px;
     border: 10px ridge black;
+    box-shadow: 10px 10px;
 }
 
 .pager {
@@ -199,6 +202,10 @@ button {
     padding: 20px 0;
     border: 20px solid black;
     border-style: ridge;
+}
+
+.header-div {
+    box-shadow: 10px 10px;
 }
 
 /* Social Media styles */
@@ -302,9 +309,10 @@ input, input {
     color: black;
 }
 
-.golf-courselist-div {
+.golf-courselist-div, .signin-div, .signup-div {
     border: 10px ridge black;
     background-color: #07A0C3;
     margin: 30px;
+    box-shadow: 10px 10px;
 }
 
