--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                         <a class="nav-link acive" href="{% url 'golfcourse_list' %}">Golf Courses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Golf News</a>
+                        <a class="nav-link active" href="{% url 'post_detail' pk=post.id %}">Golf News</a>
                     </li>
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
