--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -11,15 +11,11 @@
         {% trans 'Are you sure you want to sign out?' %}
     {% endelement %}
     {% url 'account_logout' as action_url %}
-    {% element form method="post" action=action_url no_visible_fields=True %}
-        {% slot body %}
+    <form id="logout-form" method="post" action=action_url no_visible_fields=True>
             {% csrf_token %}
             {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
+            <button type="submit" id="signout-button">
                 {% trans 'Sign Out' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
+            </button>
+    </form>
 {% endblock content %}
