--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load allauth i18n %}
+{% load static %}
 {% block head_title %}
     {% trans "Sign Out" %}
 {% endblock head_title %}
@@ -11,11 +12,15 @@
         {% trans 'Are you sure you want to sign out?' %}
     {% endelement %}
     {% url 'account_logout' as action_url %}
-    <form id="logout-form" method="post" action=action_url no_visible_fields=True>
+    {% element form method="post" action=action_url no_visible_fields=True id="logout-form" %}
+        {% slot body %}
             {% csrf_token %}
             {{ redirect_field }}
+        {% endslot %}
+        {% slot actions %}
             <button type="submit" id="signout-button">
                 {% trans 'Sign Out' %}
             </button>
-    </form>
+        {% endslot %}
+    {% endelement %}
 {% endblock content %}
