--- a/home/templates/home/golf_course_display.html
+++ b/home/templates/home/golf_course_display.html
@@ -16,7 +16,7 @@
                 <p>Submitted on: {{ course.submitted_at }}</p>
             </li>
             {% endfor %}
-            <button class="back-to-courseform-button"><a href="{% url 'golfcourse_list' %}">Back to course form!</a><button>
+            <button class="back-to-courseform-button"><a href="{% url 'golfcourse_list' %}">Back to course form!</a></button>
         </ul>
     </div>
 </body>
