Create blog post form for users to share posts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,7 +242,7 @@ form {
     margin-bottom: 20px;
 }
 
-#id_password1, #id_password2, #id_username, #id_email {
+#id_password1, #id_password2, #id_username, #id_email, #id_title, #id_content {
     width: 25%;
 }
 
