--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -12,7 +12,7 @@
         {% trans 'Are you sure you want to sign out?' %}
     {% endelement %}
     {% url 'account_logout' as action_url %}
-    {% element form method="post" action=action_url no_visible_fields=True id="logout-form" %}
+    {% element form method="post" action=action_url no_visible_fields=True %}
         {% slot body %}
             {% csrf_token %}
             {{ redirect_field }}
