--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,7 @@ body {
     padding-top: 20px;
     border: 10px ridge black;
     background-color: #30C5FF;
+    box-shadow: 10px 10px;
 }
 
 nav {
