Add comment button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,7 +176,7 @@ button {
 
 /* Hover pseudo classes */
 
-.signin-span:hover, .golf-course-list-button:hover, .signup-span:hover, .form-button:hover, #save-golfcourse-button:hover, #cancel-golfcourse-button:hover, .wide-buttons:hover, .nav-item:hover, .submit-golfcourse-button:hover, .back-to-courseform-button:hover, #signout-button:hover, #signin:hover, .save-post-button:hover, .view-postlist-button:hover {
+.signin-span:hover, .golf-course-list-button:hover, .signup-span:hover, .form-button:hover, #save-golfcourse-button:hover, #cancel-golfcourse-button:hover, .wide-buttons:hover, .nav-item:hover, .submit-golfcourse-button:hover, .back-to-courseform-button:hover, #signout-button:hover, #signin:hover, .save-post-button:hover, .view-postlist-button:hover, .viewpost-button:hover, .post-returnhome-button:hover {
     text-decoration: underline;
 }
 
@@ -307,7 +307,7 @@ input, input {
     width: 25%;
 }
 
-#save-golfcourse-button, #cancel-golfcourse-button, #signout-button {
+#save-golfcourse-button, #cancel-golfcourse-button, #signout-button, .post-returnhome-button {
     width: 10%;
     color: black;
     margin-bottom: 20px;
@@ -339,3 +339,14 @@ form, .golf-courselist-div, .signin-div, .signup-div {
     box-shadow: 10px 10px;
 }
 
+.viewpost-button {
+    width: 25%;
+    font-size: 1em;
+}
+
+/* Comment styles */
+.comment {
+    padding-top: 40px;
+    font-size: 1em;
+    font-style: italic;
+}
