--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,8 +11,18 @@
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p>{{ post.content }}</p>
                 <p><small>By {{ post.author }} on {{ post.created_on }}</small></p>
-                <a class="post-returnhome" href="{% url 'home' %}">Return to home page</a>
+                <button><a class="post-returnhome-button" href="{% url 'home' %}">Return to home page</a></button>
             </div>
+
+            <h2 class="comment">Make a comment here!</h2>
+            <ul>
+                {% for comment in comments %}
+                <li>
+                    <strong>{{ comment.author }}</strong> on {{ comment.created_on }}<br>
+                    {{ comment.text }}
+                </li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
 </body>
