--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <h2>{{ post.title }}</h2>
                     <p>{{ post.author }} | {{ post.created_on }}</p>
-                    <a href="{% url 'post_detail' post.id %}" class="btn">View post! &raquo;</a>
+                    <button class="viewpost-button"><a href="{% url 'post_detail' post.id %}" class="btn">View post! &raquo;</a></button>
                 </div>
             </div>
             {% endfor %}
