--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,22 +7,31 @@
 <body>
     <div class="masthead">
         <div class="container">
-            <div class="row g-0">
+            <div>
                 <h1 class="post-title">{{ post.title }}</h1>
                 <p>{{ post.content }}</p>
                 <p><small>By {{ post.author }} on {{ post.created_on }}</small></p>
-                <button><a class="post-returnhome-button" href="{% url 'home' %}">Return to home page</a></button>
+                <button class="post-returnhome-button"><a href="{% url 'home' %}">Return to home page</a></button>
             </div>
 
-            <h2 class="comment">Make a comment here!</h2>
             <ul>
                 {% for comment in comments %}
                 <li>
                     <strong>{{ comment.author }}</strong> on {{ comment.created_on }}<br>
-                    {{ comment.text }}
+                    {{ comment.body }}
                 </li>
                 {% endfor %}
             </ul>
+            <h2>Add a comment here...</h2>
+            {% if request.user.is_authenticated %}
+            <form method="post" class="comment-form">
+                {% csrf_token %}
+                {{ comment_form.as_p }}
+                <button class="add-commentbutton" type="submit">Add Comment</button>
+            </form>
+            {% else %}
+            <p>You need to <a href="{% url 'login' %}">log in</a> to comment.</p>
+            {% endif %}
         </div>
     </div>
 </body>
