--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -9,7 +9,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="save-post-button">Save</button>
-    <button type="submit" class="view-postlist-button"><a href="{% url 'blog' %}">View posts here!</button></a>
+    <button type="submit" class="view-postlist-button"><a href="{% url 'blog' %}">View posts here!</a></button>
 </form>
 
 {% endblock %}
