--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -28,6 +28,7 @@
                 {% csrf_token %}
                 {{ comment_form.as_p }}
                 <button class="add-commentbutton" type="submit">Add Comment</button>
+                <button type="submit" class="view-postlist-button"><a href="{% url 'blog' %}">View posts here!</a></button>
             </form>
             {% else %}
             <p>You need to <a href="{% url 'login' %}">log in</a> to comment.</p>
