--- a/home/templates/home/golf_course_display.html
+++ b/home/templates/home/golf_course_display.html
@@ -13,7 +13,7 @@
                 <h2>{{ course.name }}</h2>
                 <p>Location: {{ course.location }}</p>
                 <p>{{ course.description }}</p>
-                <p>Submitted on: {{ course.submitted_at }}</p>
+                <p>Submitted on: {{ course.created_on }}</p>
             </li>
             {% endfor %}
             <button class="back-to-courseform-button"><a href="{% url 'golfcourse_list' %}">Back to course form!</a></button>
