--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,6 +19,12 @@
                 <li>
                     <strong>{{ comment.author }}</strong> on {{ comment.created_on }}<br>
                     {{ comment.body }}
+                    {% if request.user.is_authenticated and request.user == comment.author %}
+                    <form method="post" action="{% url 'delete_comment' comment.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="deletecomment-button">Delete Comment</button>
+                    </form>
+                    {% endif %}
                 </li>
                 {% endfor %}
             </ul>
@@ -30,8 +36,6 @@
                 <button class="add-commentbutton" type="submit">Add Comment</button>
                 <button type="submit" class="view-postlist-button"><a href="{% url 'blog' %}">View posts here!</a></button>
             </form>
-            {% else %}
-            <p>You need to <a href="{% url 'login' %}">log in</a> to comment.</p>
             {% endif %}
         </div>
     </div>
