Add delete post button

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,7 +15,7 @@
                     <button class="viewpost-button"><a href="{% url 'post_detail' post.id %}" class="btn">View post! &raquo;</a></button>
                     <form method="POST" action="{% url 'post_delete' post.id %}" class="delete-form">
                         {% csrf_token %}
-                        <button type="submit" class="deletepost-button">Delete Post</button>
+                        <button type="submit" class="deletepost-button">Delete Post! &raquo;</button>
                     </form>
                 </div> 
             </div>
