--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,10 +12,11 @@
                 <div class="card-body">
                     <h2>{{ post.title }}</h2>
                     <p>{{ post.author }} | {{ post.created_on }}</p>
-                    <button class="viewpost-button"><a href="{% url 'post_detail' post.id %}" class="btn">View post! &raquo;</a></button>
                     <form method="POST" action="{% url 'post_delete' post.id %}" class="delete-form">
                         {% csrf_token %}
-                        <button type="submit" class="deletepost-button">Delete Post! &raquo;</button>
+                        <button type="submit" class="deletepost-button"><a href="{% url 'create_post' %}">Delete Post! &raquo;</a></button>
+                        <button class="viewpost-button"><a href="{% url 'post_detail' post.id %}">View Post! &raquo;</a></button>
+                        <button class="editpost-button"><a href="{% url 'edit_post' post.pk %}"></a>Edit Post! &raquo;</button>
                     </form>
                 </div> 
             </div>
