fix delete post button

--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -3,10 +3,12 @@
 {% load static %}
 
 {% block content %}
-    <h2>Edit Post</h2>
-    <form method="post" class="editpost-form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="editpost-button">Edit Post</button>
-    </form>
+
+<h2>Edit Post</h2>
+<form method="post" class="editpost-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="editpost-button">Save</button>
+</form>
+
 {% endblock %}
