--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 <h2>Edit Post</h2>
-<form method="post" class="editpost-form">
+<form method="post" action="{% url 'edit_post' post.pk %}" class="editpost-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="editpost-button"><a href="{% url 'post_list' %}">Save</a></button>
+    <button type="submit" class="editpost-button">Save</button>
 </form>
 
 {% endblock %}
